fixed header on iphone 5

--- a/app/components/Header/Header.css
+++ b/app/components/Header/Header.css
@@ -18,3 +18,10 @@
 		margin-right: 10px;
 	}
 }
+
+@media (max-width: 374px) {
+	.header h1 {
+		font-size: 1.6em;
+		margin-top: 14px;
+	}
+}
